@@ -106,6 +106,7 @@ zcml =
     communesplone.layout
     collective.ckeditor
 #This is needed so plone translations overrides are taken into account
+    Products.MeetingMons
     Products.PloneMeeting
     Products.PloneMeeting-overrides
     plonetheme.imioapps
