@@ -1,9 +1,9 @@
 # Define each mount point as the following block
 
-<zodb_db xxx> 
+<zodb_db mons> 
   <filestorage>
-    path $FILESTORAGE/xxx.fs
-    blob-dir $BLOBSTORAGE-xxx
+    path $FILESTORAGE/mons_pm.fs
+    blob-dir $BLOBSTORAGE-mons
   </filestorage>
-  mount-point /xxx
+  mount-point /mons
 </zodb_db>
